rest-fight/src/main/kubernetes/kubernetes.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rest-fight
  namespace: superheroes
spec:
  ingressClassName: nginx
  rules:
    - host: superheroes.com
      http:
        paths:
          - backend:
              service:
                name: rest-fight
                port:
                  number: 80
            path: /api/fights
            pathType: Prefix
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fight-database
  namespace: superheroes
spec:
  selector:
    matchLabels:
      name: fight-database
  template:
    metadata:
      labels:
        name: fight-database
    spec:
      containers:
        - name: fight-database
          imagePullPolicy: IfNotPresent
          image: mongo
          ports:
            - containerPort: 27017
              protocol: TCP
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: fight-database
  namespace: superheroes
spec:
  selector:
    name: fight-database
  ports:
    - name: http
      port: 27017
      targetPort: 27017
      protocol: TCP
  type: ClusterIP
